--- a/build.xml
+++ b/build.xml
@@ -38,6 +38,7 @@
         <vendor url="https://ekvv.uni-bielefeld.de/pers_publ/publ/PersonDetail.jsp?personId=46595843">Dennis Leroy Wigand</vendor>
         <depends>jetbrains.mps.core</depends>
         <vendor email="dwigand@techfak.uni-bielefeld.de" url="https://github.com/xwavex">Dennis Leroy Wigand</vendor>
+        <idea-version until-build="172.1347" since-build="172.1347" />
         
         <extensions defaultExtensionNs="com.intellij">
           <mps.LanguageLibrary dir="/languages" />
@@ -127,6 +128,36 @@
       <zipfileset dir="${build.tmp}/customProcessors/copyModels/languages-coordination-generator-template" prefix="module/generator/template" />
       <zipfileset dir="${build.tmp}/customProcessors/copyModels/languages-coordination-languageModels" prefix="module/languageModels" />
     </jar>
+    <mkdir dir="${build.tmp}/default/Coordination.build.jar" />
+    <mkdir dir="${build.tmp}/default/Coordination.build.jar/META-INF" />
+    <echoxml file="${build.tmp}/default/Coordination.build.jar/META-INF/module.xml">
+      <module namespace="Coordination.build" type="solution" uuid="235c521d-1c2b-4b5d-954e-3e0bf0da7519">
+        <dependencies />
+        <classpath>
+          <entry path="." />
+        </classpath>
+        <sources jar="Coordination.build-src.jar" descriptor="Coordination.build.msd" />
+      </module>
+    </echoxml>
+    <jar destfile="${build.tmp}/default/Coordination.zip/Coordination/languages/Coordination/Coordination.build.jar" duplicate="preserve">
+      <fileset dir="${build.tmp}/java/out/Coordination.build" />
+      <fileset dir="${basedir}/solutions/Coordination.build" includes="icons/**, resources/**" />
+      <fileset dir="${basedir}/solutions/Coordination.build/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
+      <fileset dir="${build.tmp}/default/Coordination.build.jar" />
+    </jar>
+    <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-Coordination.build-models">
+      <fileset dir="${basedir}/solutions/Coordination.build/models" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
+    </copyModels>
+    <jar destfile="${build.tmp}/default/Coordination.zip/Coordination/languages/Coordination/Coordination.build-src.jar" duplicate="preserve">
+      <fileset dir="${basedir}/solutions/Coordination.build/source_gen">
+        <exclude name="**/trace.info" />
+        <exclude name="**/exports" />
+        <exclude name="**/checkpoints" />
+        <exclude name="**/*.mps" />
+      </fileset>
+      <zipfileset file="${basedir}/solutions/Coordination.build/Coordination.build.msd" prefix="module" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-Coordination.build-models" prefix="module/models" />
+    </jar>
     <zip destfile="${build.layout}/Coordination.zip">
       <zipfileset file="${basedir}/devkits/Coordination.devkit" prefix="Coordination/languages/Coordination.dk" />
       <fileset dir="${build.tmp}/default/Coordination.zip" />
@@ -145,7 +176,7 @@
     <delete dir="${build.layout}" />
   </target>
   
-  <target name="compileJava" depends="java.compile.coordination, java.compile.coordination#3975843521651967143" />
+  <target name="compileJava" depends="java.compile.coordination, java.compile.coordination#3975843521651967143, java.compile.Coordination.build" />
   
   <target name="processResources" />
   
@@ -209,6 +240,8 @@
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.traceable.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.typesystem.jar" />
       <library file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.refactoring.participant.jar" />
+      <library file="${artifacts.mps}/languages/make/jetbrains.mps.make.reduced.jar" />
+      <library file="${artifacts.mps}/languages/make/jetbrains.mps.tool.gentest.jar" />
       <library file="${artifacts.mps}/languages/xml/jetbrains.mps.core.xml.jar" />
       <library file="${artifacts.mps}/lib/mps-behavior-api.jar" />
       <library file="${artifacts.mps}/lib/mps-behavior-runtime.jar" />
@@ -216,11 +249,20 @@
       <library file="${artifacts.mps}/lib/mps-collections.jar" />
       <library file="${artifacts.mps}/lib/mps-core.jar" />
       <library file="${artifacts.mps}/lib/mps-editor.jar" />
+      <library file="${artifacts.mps}/lib/mps-environment.jar" />
       <library file="${artifacts.mps}/lib/mps-openapi.jar" />
       <library file="${artifacts.mps}/lib/mps-platform.jar" />
+      <library file="${artifacts.mps}/lib/mps-stubs.jar" />
+      <library file="${artifacts.mps}/lib/mps-test.jar" />
+      <library file="${artifacts.mps}/lib/mps-tool.jar" />
       <library file="${artifacts.mps}/lib/mps-tuples.jar" />
+      <library file="${artifacts.mps}/plugins/mps-build/languages/build/jetbrains.mps.build.jar" />
+      <library file="${artifacts.mps}/plugins/mps-build/languages/build/jetbrains.mps.build.mps.jar" />
+      <library file="${artifacts.mps}/plugins/mps-build/languages/build/jetbrains.mps.build.workflow.jar" />
+      <library file="${artifacts.mps}/plugins/mps-build/languages/build/jetbrains.mps.ide.build.jar" />
       <chunk>
         <module file="${basedir}/devkits/Coordination.devkit" />
+        <module file="${basedir}/solutions/Coordination.build/Coordination.build.msd" />
         <module file="${basedir}/languages/coordination/coordination.mpl" />
       </chunk>
       <jvmargs>
@@ -324,7 +366,20 @@
     </javac>
   </target>
   
+  <target name="java.compile.Coordination.build">
+    <mkdir dir="${basedir}/solutions/Coordination.build/source_gen" />
+    <mkdir dir="${build.tmp}/java/out/Coordination.build" />
+    <javac destdir="${build.tmp}/java/out/Coordination.build" fork="true" encoding="utf8" includeantruntime="false" debug="true">
+      <compilerarg value="-Xlint:none" />
+      <src>
+        <path location="${basedir}/solutions/Coordination.build/source_gen" />
+      </src>
+      <classpath />
+    </javac>
+  </target>
+  
   <target name="cleanSources">
+    <delete dir="${basedir}/solutions/Coordination.build/source_gen" />
     <delete dir="${basedir}/languages/coordination/source_gen" />
     <delete dir="${basedir}/languages/coordination/generator/source_gen" />
   </target>
